--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <main>
         <article class="box">
             <h1>Sahil Sarkate</h1>
-            <div><a href="mailto:your.email@example.com">your-email@example.com</a></div>
+            <div><a href="mailto:your.email@example.com">Sahil.Sarkate@studentambassadors.com</a></div>
             
             <section class="box">
                 <h2>
@@ -21,9 +21,9 @@
                     Social media
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/<handle>">@github_handle</a></li>
-                    <li><a href="https://linkedin.com/in/<handle>">@linkedin_handle</a></li>
-                    <li><a href="https://twitter.com/<handle>">@twitter_handle</a></li>
+                    <li><a href="https://github.com/<handle>">Sahil-Sarkate</a></li>
+                    <li><a href="https://linkedin.com/in/<handle>">sahilsarkate</a></li>
+                    <li><a href="https://twitter.com/<handle>">SarchasticSahil06</a></li>
                 </ul>    
             </section>
             
@@ -31,11 +31,11 @@
                 <div class="education">
                     <h2>
                         <i class="fa fa-certificate" aria-hidden="true"></i>
-                        School name
+                      marathwada Mitra Mandal College of Engineering Pune
                     </h2>
                     <h3>Major</h3>
                     <ul>
-                        <li>GPA: 4.0</li>
+                        <li>GPA: 9.2</li>
                         <li>Years</li>
                     </ul>
                 </div>
@@ -73,7 +73,7 @@
                     Internships
                 </h2>
 
-                <h3>Company name</h3>
+                <h3>Equations Work</h3>
                 <ul>
                     <li>Accomplishment</li>
                     <li>Another accomplishment</li>
