--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,8 @@
                     Social media
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/<handle>">Sahil-Sarkate</a></li>
-                    <li><a href="https://linkedin.com/in/<handle>">sahilsarkate</a></li>
+                    <li><a href="https://github.com/Sahil-Sarkate">Sahil-Sarkate</a></li>
+                    <li><a href="https://linkedin.com/in/sahil-sarkate-86514b1b5/">sahilsarkate</a></li>
                     <li><a href="https://twitter.com/<handle>">SarchasticSahil06</a></li>
                 </ul>    
             </section>
