--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
                     <h3>Major</h3>
                     <ul>
                         <li>GPA: 9.2</li>
-                        <li>Years</li>
+                        <li>3 Years</li>
                     </ul>
                 </div>
             </section>
@@ -63,8 +63,8 @@
                 </h2>
                 <h3>Microsoft Learn Student Ambassador</h3>
                 <ul>
-                    <li>Some skill</li>
-                    <li>Another skill</li>
+                    <li>Event Manager at Google Developer Students Club</li>
+                    <li>Member of ACES</li>
                 </ul>
             </section>
             <section class="box">
